@@ -1,0 +1,2 @@
+exclude_patterns = ['_build']
+linkcheck_anchors = True
