@@ -33,6 +33,7 @@ Deprecated
 Features added
 --------------
 
+* #4303: linkcheck: Avoid duplicate download of page to check multiple anchors
 * #8022: autodoc: autodata and autoattribute directives does not show right-hand
   value of the variable if docstring contains ``:meta hide-value:`` in
   info-field-list
